--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.h2.console.path=/h2-console
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 server.servlet.context-path=/api
 
@@ -23,3 +24,17 @@ java.teste=3333
 #EM H2-CONSOLE, usar JDBC URL = jdbc:h2:mem:testdb
 
 ## ---> https://mmarcosab.medium.com/configurando-mysql-no-application-properties-de-um-programa-feito-com-spring-boot-bb82fa748b12
+
+# Script do DEVSuperior
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+
+
